5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1721_3067.log
== TEST (2019-05-02 18:19:13) 
-- CODE:
ferbnad
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ferbnad
NameError: name 'ferbnad' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:00) 
-- CODE:
ferbna
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ferbna
NameError: name 'ferbna' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:22:01) 
-- CODE:
ferbna
-- EXECUTION TIME:
0.199625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3067/main.py", line 1, in <module>
    ferbna
NameError: name 'ferbna' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
